# paxel_dsort

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  verify.yml
src/: dick_sort.rs  dicksort.rs  main.rs  progress.rs  shell.rs
src/dick_sort/: file_scanner.rs  process.rs
