[package]
name = "dicksort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
kamadak-exif = "0.5.5"
termion = "2.0.1"
ctrlc = "3.4.1"
pathdiff = "0.2.1"
anyhow = "1"